syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

import "google/protobuf/empty.proto";

service TwoPCService {
  rpc Create2PhaseCommit(TwoPCRequest) returns (TwoPCReply) {};
  rpc CreateLease(TwoPCRequest) returns(TwoPCReply) {};
  rpc Update2PhaseCommitStatus(TwoPCRequest) returns(google.protobuf.Empty) {};
  rpc Finish2PhaseCommit(TwoPCRequest) returns(google.protobuf.Empty) {};
}

message TwoPCRequest {
  string txid = 1;
  string status = 2;
  string db = 3;
  repeated string shards = 4;
}

message TwoPCReply {
  int64 lease = 1;
}
